# QIde

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.b7d54e3  QIde_fr_FR.ts  README.md  TODO  bottombar.cpp  compileoutput.cpp  compileoutput.h  java.l  java.y  main.cpp  mainwindow.cpp  sidebar.cpp  tabholder.cpp  tabholder.h
QIde-core/: .gitignore  CodeGenerator.cc  CodeGenerator.cpp  CodeGenerator.h  CodeGenerator.hh  Instruction.cc  Instruction.cpp  Instruction.h  Instruction.hh  Makefile  README.md  Test.java  analyze++  cli_error_handler.cc  cli_error_handler.hh  code_generator.cc  code_generator.hh  driver.cc  driver.hh  error_handler.hh  instruction.cc  java_lexer.cc  java_lexer.hh  java_lexer.ll  java_parser.cc  java_parser.hh  java_parser.output  java_parser.yy  java_semantics.cc  java_semantics.hh  javacompiler  location.hh  main.cc  notes.md  opcode.cpp  opcode.h  opcode.hh  utils.hh
QIde-gui/: LineNumberArea.cpp  LineNumberArea.h  QIde_fr_FR.ts  README.md  bottombar.h  compileoutput.cpp  linenumberarea.cpp  linenumberarea.h  main.cpp  maindocument.cpp  maindocument.h  mainwindow.h  menubar.cpp  sidebar.h
QIde-gui/error-handling/: gui_error_handler.cc  gui_error_handler.hh
QIde-gui/syntax/: JavaHighlighter.cpp  JavaHighlighter.h  defaultClasses  defaultInterfaces  java_highlighter.cpp  java_highlighter.h  keywords
